# stocks-search

./: .gitignore  _commit_msg.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: auth.py  database.py  fundamentals_cache.py  jquants_client.py  llm_service.py  main.py  master.py  models.py  requirements.txt  screener_service.py  stock_service.py  us_master.py
backend/data/: us_master_cache.json
backend/routers/: auth_router.py  moomoo_router.py  portfolio_router.py  sync_router.py
src/: App.tsx  ErrorBoundary.tsx  ThemeContext.tsx  api.ts  index.css  indicators.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/auth/: AuthContext.tsx  api.ts
src/components/: AIPanel.tsx  AuthModal.tsx  CandlestickChart.tsx  IndividualCharts.tsx  LegalModal.tsx  PortfolioPanel.tsx  ScreenerPanel.tsx  SettingsPanel.tsx  StatsCards.tsx  StockChart.tsx  StockDetailModal.tsx  StockTable.tsx  WatchlistPanel.tsx
src/i18n/: en.ts  index.ts  ja.ts
